--- a/style.css
+++ b/style.css
@@ -1,2 +1,64 @@
+body {
+    display : flex;
+    flex-direction : column ;
+    margin : 0 ;
+    padding : 0 ;
+}
+.header {
+    display : flex;
+    justify-content: space-between;
+    align-items: center;
+    padding : 8px;
+    
+    padding-left : 200px;
+}
+ul{
+    display : flex;
+    gap : 16px;
+    list-style : none;
+    padding : 0;
+    margin : 0;
+    padding-right : 200px;
+}
+.container {
+    display : flex;
+    justify-content : space-between;
+    /* padding : 8px; */
+    
+    margin-top : 90px;
+    
+    
+}
+ .text {
+    padding-left: 200px;
+    
+    
+}
+.egg {
+    padding-right: 200px;
+    
+} 
+.main {
+    font-size : 48px;
+    font-weight: 900;
+    margin-bottom : 8px;
+}
+.sub{
+    font-size : 18px;
+    margin-bottom : 8px;
+}
+button {
+    background-color: #3882f6;
+    color : white;
+    border :none;
+    border-radius : 8px;
+    cursor : pointer ;
+}
+.top {
+    background-color : lightpink;
+    height : 500px;
+}
+ 
+
 
 
