--- a/style.css
+++ b/style.css
@@ -105,6 +105,14 @@ h2 {
 }
 .group {
     display : flex;
+    justify-content: space-between;
+    padding : 32px;
+}
+.footer {
+    text-align : center;
+    padding : 16px;
+    background-color: #1F2937;
+    color : white;
 }
 
  
